Fixed Display of edit button and nav spacing

--- a/app/profile/[username]/profileUserPage.module.scss
+++ b/app/profile/[username]/profileUserPage.module.scss
@@ -4,7 +4,7 @@
     grid-column: h4-start / h9-end;
     grid-row: sl1-start / sr5-end;
     width: 100%;
-    
+    padding-top: 5rem;
     overflow: visible;
     position: relative;
 
