--- a/app/profile/profile.module.scss
+++ b/app/profile/profile.module.scss
@@ -13,3 +13,25 @@
     }
     
 }
+
+.editHolder{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 2rem;
+}
+
+.editBtn{
+    position: relative;
+    top: 10;
+    display: block;
+    width: 10%;
+    background-color: $primary-dark-blue;
+    color: white;
+    padding: 0.5rem 2rem;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+    
+    
+}
